feat (SRS-04) : implement API users dashboard
